--- a/about.html
+++ b/about.html
@@ -26,19 +26,19 @@
           <ul class="l-hero__social">
             <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
                 <svg class="svg-use">
-                  <use xlink:href="../../assets/images/sprites/sprite.svg#vk">
+                  <use xlink:href="./assets/images/sprites/sprite.svg#vk">
                     <title>vk</title>
                   </use>
                 </svg></a></li>
             <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
                 <svg class="svg-use">
-                  <use xlink:href="../../assets/images/sprites/sprite.svg#github">
+                  <use xlink:href="./assets/images/sprites/sprite.svg#github">
                     <title>github</title>
                   </use>
                 </svg></a></li>
             <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
                 <svg class="svg-use">
-                  <use xlink:href="../../assets/images/sprites/sprite.svg#in">
+                  <use xlink:href="./assets/images/sprites/sprite.svg#in">
                     <title>in</title>
                   </use>
                 </svg></a></li>
@@ -59,48 +59,48 @@
                 <ul class="c-hamburger-nav__list">
                   <li class="c-hamburger-nav__item">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/my_works.html">мои работы</a>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                   </li>
                   <li class="c-hamburger-nav__item">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/blog.html">блог</a>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                   </li>
                   <li class="c-hamburger-nav__item">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/about.html">обо мне</a>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                   </li>
                   <li class="c-hamburger-nav__item">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/login.html">авторизация</a>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
@@ -112,13 +112,13 @@
             </nav>
           </div>
           <svg class="svg_hero">
-            <use xlink:href="../../assets/images/sprites/sprite.svg#portfolio_header">
+            <use xlink:href="./assets/images/sprites/sprite.svg#portfolio_header">
               <title>portfolio_header</title>
             </use>
           </svg>
           <div class="l-hero__develop">
             <div class="c-developer">
-              <div class="c-developer__img-wrap" style="background-image: url('../../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="/portfolio_pages/assets/images/content/photo.jpg"></div>
+              <div class="c-developer__img-wrap" style="background-image: url('./assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="/portfolio_pages/assets/images/content/photo.jpg"></div>
               <div class="c-developer__content">
                 <h1 class="c-developer__header">Yuliya Volkova</h1>
                 <h2 class="c-developer__desc">Личный сайт WEB Разработчика</h2>
@@ -126,7 +126,7 @@
             </div>
           </div><a class="c-next" id="next" href="#2section">
             <svg class="svg_next">
-              <use xlink:href="../../assets/images/sprites/sprite.svg#arrow_down">
+              <use xlink:href="./assets/images/sprites/sprite.svg#arrow_down">
                 <title>arrow_down</title>
               </use>
             </svg></a>
@@ -144,18 +144,18 @@
                 <div class="c-about-card">
                   <div class="c-about-card__header">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                     <h2 class="h-title-section">обо мне</h2>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                     <svg class="svg-main-icon svg-main-icon_about">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#about_header">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#about_header">
                         <title>about_header</title>
                       </use>
                     </svg>
@@ -163,13 +163,13 @@
                   <div class="c-about-card__content">
                     <div class="c-about-card__content-header">
                       <svg class="svg_dash">
-                        <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                        <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                           <title>dash</title>
                         </use>
                       </svg>
                       <h3 class="h-title-article">Кто я</h3>
                       <svg class="svg_dash">
-                        <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                        <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                           <title>dash</title>
                         </use>
                       </svg>
@@ -182,13 +182,13 @@
                 <div class="c-skills-card">
                   <div class="c-skills-card__header">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                     <h3 class="h-title-article">Чем я могу быть вам полезен</h3>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
@@ -204,13 +204,13 @@
                 <div class="c-contacts">
                   <div class="c-contacts__header">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                     <h3 class="h-title-article">Контакты</h3>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
@@ -219,25 +219,25 @@
                     <ul class="c-contacts__list">
                       <li class="c-contacts__row"><a class="c-contacts__link" href="skype:yuliyawolf?add" target="_blank">
                           <svg class="svg_skype">
-                            <use xlink:href="../../assets/images/sprites/sprite.svg#skype">
+                            <use xlink:href="./assets/images/sprites/sprite.svg#skype">
                               <title>skype</title>
                             </use>
                           </svg><span>skype_kdn</span></a></li>
                       <li class="c-contacts__row"><a class="c-contacts__link" href="mailto:someone@example.com" target="_blank">
                           <svg class="svg_mail">
-                            <use xlink:href="../../assets/images/sprites/sprite.svg#mail">
+                            <use xlink:href="./assets/images/sprites/sprite.svg#mail">
                               <title>mail</title>
                             </use>
                           </svg><span>astachov@gmail.com</span></a></li>
                       <li class="c-contacts__row"><a class="c-contacts__link" href="tel:+7-800-000-392-10" target="_blank">
                           <svg class="svg_phone">
-                            <use xlink:href="../../assets/images/sprites/sprite.svg#phone">
+                            <use xlink:href="./assets/images/sprites/sprite.svg#phone">
                               <title>phone</title>
                             </use>
                           </svg><span>+7-800-000-392-10</span></a></li>
                       <li class="c-contacts__row"><a class="c-contacts__link" href="https://www.google.com/maps/search/?api=1&amp;query=59.83428, 30.125099" target="_blank">
                           <svg class="svg_map-marker">
-                            <use xlink:href="../../assets/images/sprites/sprite.svg#map_marker">
+                            <use xlink:href="./assets/images/sprites/sprite.svg#map_marker">
                               <title>map_marker</title>
                             </use>
                           </svg><span>г.Новосибирск, ул. Инская, д. 5</span></a></li>
@@ -259,19 +259,19 @@
                   <ul class="l-footer__social">
                     <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
                         <svg class="svg-use">
-                          <use xlink:href="../../assets/images/sprites/sprite.svg#vk">
+                          <use xlink:href="./assets/images/sprites/sprite.svg#vk">
                             <title>vk</title>
                           </use>
                         </svg></a></li>
                     <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
                         <svg class="svg-use">
-                          <use xlink:href="../../assets/images/sprites/sprite.svg#github">
+                          <use xlink:href="./assets/images/sprites/sprite.svg#github">
                             <title>github</title>
                           </use>
                         </svg></a></li>
                     <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
                         <svg class="svg-use">
-                          <use xlink:href="../../assets/images/sprites/sprite.svg#in">
+                          <use xlink:href="./assets/images/sprites/sprite.svg#in">
                             <title>in</title>
                           </use>
                         </svg></a></li>
