--- a/my_works.html
+++ b/my_works.html
@@ -26,19 +26,19 @@
           <ul class="l-hero__social">
             <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
                 <svg class="svg-use">
-                  <use xlink:href="../../assets/images/sprites/sprite.svg#vk">
+                  <use xlink:href="./assets/images/sprites/sprite.svg#vk">
                     <title>vk</title>
                   </use>
                 </svg></a></li>
             <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
                 <svg class="svg-use">
-                  <use xlink:href="../../assets/images/sprites/sprite.svg#github">
+                  <use xlink:href="./assets/images/sprites/sprite.svg#github">
                     <title>github</title>
                   </use>
                 </svg></a></li>
             <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
                 <svg class="svg-use">
-                  <use xlink:href="../../assets/images/sprites/sprite.svg#in">
+                  <use xlink:href="./assets/images/sprites/sprite.svg#in">
                     <title>in</title>
                   </use>
                 </svg></a></li>
@@ -59,48 +59,48 @@
                 <ul class="c-hamburger-nav__list">
                   <li class="c-hamburger-nav__item">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/my_works.html">мои работы</a>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                   </li>
                   <li class="c-hamburger-nav__item">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/blog.html">блог</a>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                   </li>
                   <li class="c-hamburger-nav__item">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/about.html">обо мне</a>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                   </li>
                   <li class="c-hamburger-nav__item">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/login.html">авторизация</a>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
@@ -112,13 +112,13 @@
             </nav>
           </div>
           <svg class="svg_hero">
-            <use xlink:href="../../assets/images/sprites/sprite.svg#portfolio_header">
+            <use xlink:href="./assets/images/sprites/sprite.svg#portfolio_header">
               <title>portfolio_header</title>
             </use>
           </svg>
           <div class="l-hero__develop">
             <div class="c-developer">
-              <div class="c-developer__img-wrap" style="background-image: url('../../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="/portfolio_pages/assets/images/content/photo.jpg"></div>
+              <div class="c-developer__img-wrap" style="background-image: url('./assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="/portfolio_pages/assets/images/content/photo.jpg"></div>
               <div class="c-developer__content">
                 <h1 class="c-developer__header">Yuliya Volkova</h1>
                 <h2 class="c-developer__desc">Личный сайт WEB Разработчика</h2>
@@ -126,13 +126,13 @@
             </div>
           </div><a class="c-next" id="next" href="#2section">
             <svg class="svg_next">
-              <use xlink:href="../../assets/images/sprites/sprite.svg#arrow_down">
+              <use xlink:href="./assets/images/sprites/sprite.svg#arrow_down">
                 <title>arrow_down</title>
               </use>
             </svg></a>
           <div class="l-main__top">
             <svg class="svg_main-top_one-color">
-              <use xlink:href="../../assets/images/sprites/sprite.svg#bg">
+              <use xlink:href="./assets/images/sprites/sprite.svg#bg">
                 <title>bg</title>
               </use>
             </svg>
@@ -142,18 +142,18 @@
               <div class="l-main__header">
                 <div class="l-main__header-title">
                   <svg class="svg_dash">
-                    <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                    <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                       <title>dash</title>
                     </use>
                   </svg>
                   <h2 class="h-title-section">Мои Pаботы</h2>
                   <svg class="svg_dash">
-                    <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                    <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                       <title>dash</title>
                     </use>
                   </svg>
                   <svg class="svg-main-icon svg-main-icon_works">
-                    <use xlink:href="../../assets/images/sprites/sprite.svg#works_header">
+                    <use xlink:href="./assets/images/sprites/sprite.svg#works_header">
                       <title>works_header</title>
                     </use>
                   </svg>
@@ -165,20 +165,20 @@
                 <div class="c-slider__desc-fr" v-for="index in slides" v-if="index === activeSlide" :key="index">
                   <div class="c-slider__desc-header">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                     <h3 class="h-title-article">{{dataArrActive[index-1].title}}</h3>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                   </div>
                   <div class="c-slider__desc-text"><span>{{dataArrActive[index-1].technologies}}</span></div><a class="c-button c-slider__desc-link" href="https://webmanshake.ru/" target="_blank">
                     <svg class="svg_link">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#link">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#link">
                         <title>link</title>
                       </use>
                     </svg><span class="c-button__text">Посмотреть сайт</span></a>
@@ -198,7 +198,7 @@
                   <div class="c-slider__control-next">
                     <transition-group class="next-move" :class="{'is-set': isSet, 'is-reversing': isReversingNext}" tag="div"><img class="c-slider__control-img img-next" alt="" v-for="count in dataArrNext.length" :key="count" :src="dataArrNext[count-1].url" :class="{'is-ref': count === classIsRefNext}"></transition-group><a class="c-slider__control__link" href="#" @click="toNext">
                       <svg class="svg_slider-arrow">
-                        <use xlink:href="../../assets/images/sprites/sprite.svg#portf_arrow_up">
+                        <use xlink:href="./assets/images/sprites/sprite.svg#portf_arrow_up">
                           <title>portf_arrow_up</title>
                         </use>
                       </svg></a>
@@ -212,18 +212,18 @@
                   <div class="c-feeds__header">
                     <div class="c-feeds__header-title">
                       <svg class="svg_dash">
-                        <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                        <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                           <title>dash</title>
                         </use>
                       </svg>
                       <h2 class="h-title-section">Что обо мне говорят</h2>
                       <svg class="svg_dash">
-                        <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                        <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                           <title>dash</title>
                         </use>
                       </svg>
                       <svg class="svg-main-icon svg-main-icon_works">
-                        <use xlink:href="../../assets/images/sprites/sprite.svg#about_header">
+                        <use xlink:href="./assets/images/sprites/sprite.svg#about_header">
                           <title>about_header</title>
                         </use>
                       </svg>
@@ -258,13 +258,13 @@
                     <div class="c-feeds-form">
                       <div class="c-feeds-form__header">
                         <svg class="svg_dash">
-                          <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                          <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                             <title>dash</title>
                           </use>
                         </svg>
                         <h3 class="h-title-article">Связаться со мной</h3>
                         <svg class="svg_dash">
-                          <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                          <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                             <title>dash</title>
                           </use>
                         </svg>
@@ -303,7 +303,7 @@
                     </div>
                   </div><a class="c-prev" id="first" href="#1section">
                     <svg class="svg_prev">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#arrow_down">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#arrow_down">
                         <title>arrow_down</title>
                       </use>
                     </svg></a>
@@ -322,19 +322,19 @@
                     <ul class="l-footer__social">
                       <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
                           <svg class="svg-use">
-                            <use xlink:href="../../assets/images/sprites/sprite.svg#vk">
+                            <use xlink:href="./assets/images/sprites/sprite.svg#vk">
                               <title>vk</title>
                             </use>
                           </svg></a></li>
                       <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
                           <svg class="svg-use">
-                            <use xlink:href="../../assets/images/sprites/sprite.svg#github">
+                            <use xlink:href="./assets/images/sprites/sprite.svg#github">
                               <title>github</title>
                             </use>
                           </svg></a></li>
                       <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
                           <svg class="svg-use">
-                            <use xlink:href="../../assets/images/sprites/sprite.svg#in">
+                            <use xlink:href="./assets/images/sprites/sprite.svg#in">
                               <title>in</title>
                             </use>
                           </svg></a></li>
