--- a/blog.html
+++ b/blog.html
@@ -59,48 +59,48 @@
                 <ul class="c-hamburger-nav__list">
                   <li class="c-hamburger-nav__item">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/my_works.html">мои работы</a>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                   </li>
                   <li class="c-hamburger-nav__item">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/blog.html">блог</a>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                   </li>
                   <li class="c-hamburger-nav__item">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/about.html">обо мне</a>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
                   </li>
                   <li class="c-hamburger-nav__item">
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/login.html">авторизация</a>
                     <svg class="svg_dash">
-                      <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                      <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
                     </svg>
@@ -113,22 +113,22 @@
           </div>
           <div class="l-hero__develop l-hero__develop_blog">
             <div class="c-developer">
-              <div class="c-developer__img-wrap" style="background-image: url('../../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="/portfolio_pages/assets/images/content/photo.jpg"></div>
+              <div class="c-developer__img-wrap" style="background-image: url('./assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="/portfolio_pages/assets/images/content/photo.jpg"></div>
               <div class="c-developer__content">
                 <div class="c-develop_blog-header">
                   <svg class="svg_dash">
-                    <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                    <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                       <title>dash</title>
                     </use>
                   </svg>
                   <h1 class="h-title-section h-title-section_color">блог</h1>
                   <svg class="svg_dash">
-                    <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                    <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                       <title>dash</title>
                     </use>
                   </svg>
                   <svg class="svg_hero-blog">
-                    <use xlink:href="../../assets/images/sprites/sprite.svg#blog_header">
+                    <use xlink:href="./assets/images/sprites/sprite.svg#blog_header">
                       <title>blog_header</title>
                     </use>
                   </svg>
@@ -139,7 +139,7 @@
           </div>
           <div class="l-main__top">
             <svg class="svg_main-top_one-color">
-              <use xlink:href="../../assets/images/sprites/sprite.svg#bg">
+              <use xlink:href="./assets/images/sprites/sprite.svg#bg">
                 <title>bg</title>
               </use>
             </svg>
@@ -201,19 +201,19 @@
                   <ul class="l-footer__social">
                     <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
                         <svg class="svg-use">
-                          <use xlink:href="../../assets/images/sprites/sprite.svg#vk">
+                          <use xlink:href="./assets/images/sprites/sprite.svg#vk">
                             <title>vk</title>
                           </use>
                         </svg></a></li>
                     <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
                         <svg class="svg-use">
-                          <use xlink:href="../../assets/images/sprites/sprite.svg#github">
+                          <use xlink:href="./assets/images/sprites/sprite.svg#github">
                             <title>github</title>
                           </use>
                         </svg></a></li>
                     <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
                         <svg class="svg-use">
-                          <use xlink:href="../../assets/images/sprites/sprite.svg#in">
+                          <use xlink:href="./assets/images/sprites/sprite.svg#in">
                             <title>in</title>
                           </use>
                         </svg></a></li>
