--- a/blog.html
+++ b/blog.html
@@ -26,19 +26,19 @@
           <ul class="l-hero__social">
             <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
                 <svg class="svg-use">
-                  <use xlink:href="../../assets/images/sprites/sprite.svg#vk">
+                  <use xlink:href="./assets/images/sprites/sprite.svg#vk">
                     <title>vk</title>
                   </use>
                 </svg></a></li>
             <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
                 <svg class="svg-use">
-                  <use xlink:href="../../assets/images/sprites/sprite.svg#github">
+                  <use xlink:href="./assets/images/sprites/sprite.svg#github">
                     <title>github</title>
                   </use>
                 </svg></a></li>
             <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
                 <svg class="svg-use">
-                  <use xlink:href="../../assets/images/sprites/sprite.svg#in">
+                  <use xlink:href="./assets/images/sprites/sprite.svg#in">
                     <title>in</title>
                   </use>
                 </svg></a></li>
