--- a/login.html
+++ b/login.html
@@ -96,7 +96,7 @@
           </div>
           <div class="l-backface-container">
             <div class="c-welcome">
-              <div class="c-welcome__img-wrap" style="background-image: url(`./assets/images/content/photo.jpg`); background-repeat:no-repeat;"><img class="c-welcome__img visually-hidden" alt="" src="/portfolio_pages/assets/images/content/photo.jpg"></div>
+              <div class="c-welcome__img-wrap" style="background-image: url('./assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-welcome__img visually-hidden" alt="" src="/portfolio_pages/assets/images/content/photo.jpg"></div>
               <div class="c-welcome__content">
                 <h1 class="c-welcome__header">Yuliya Volkova</h1>
                 <h2 class="c-welcome__desc">Личный сайт WEB Разработчика</h2>
