--- a/my_works.html
+++ b/my_works.html
@@ -62,7 +62,7 @@
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
-                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/my_works.html">мои работы</a>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="./my_works.html">мои работы</a>
                     <svg class="svg_dash">
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
@@ -74,7 +74,7 @@
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
-                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/blog.html">блог</a>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="./blog.html">блог</a>
                     <svg class="svg_dash">
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
@@ -86,7 +86,7 @@
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
-                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/about.html">обо мне</a>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="./about.html">обо мне</a>
                     <svg class="svg_dash">
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
@@ -98,7 +98,7 @@
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
-                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/login.html">авторизация</a>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="./login.html">авторизация</a>
                     <svg class="svg_dash">
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
@@ -190,7 +190,7 @@
                   <div class="c-slider__control-prev">
                     <transition-group class="prev-move" :class="{'is-set': isSet, 'is-reversing': isReversingPrev}" tag="div"><img class="c-slider__control-img img-prev" alt="" v-for="indx in dataArrPrev.length" :key="indx" :src="dataArrPrev[indx-1].url" :class="{'is-ref': indx === classIsRefPrev}"></transition-group><a class="c-slider__control__link" href="#" @click="toPrev">
                       <svg class="svg_slider-arrow">
-                        <use xlink:href="../../assets/images/sprites/sprite.svg#portf_arrow_up">
+                        <use xlink:href="./assets/images/sprites/sprite.svg#portf_arrow_up">
                           <title>portf_arrow_up</title>
                         </use>
                       </svg></a>
@@ -234,7 +234,7 @@
                       <div class="c-feeds__card-icon"><span class="fa fa-quote-left"></span></div>
                       <div class="c-feeds-card__text"><span>Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!</span></div>
                       <div class="c-feeds-card__about">
-                        <div class="c-feeds-card__img-wrap" style="background-image: url(../../assets/images/content/kovalchuk.jpg); background-repeat:no-repeat;"><img class="c-feeds-card__img visually-hidden" alt="" src="require(../../assets/images/content/kovalchuk.jpg)"></div>
+                        <div class="c-feeds-card__img-wrap" style="background-image: url(./assets/images/content/kovalchuk.jpg); background-repeat:no-repeat;"><img class="c-feeds-card__img visually-hidden" alt="" src="require(./assets/images/content/kovalchuk.jpg)"></div>
                         <div class="c-feeds-card__about-text">
                           <div class="c-feeds-card__about-name"><span>Ковальчук Дмитрий</span></div>
                           <div class="c-feeds-card__about-desc"><span></span></div>
@@ -245,7 +245,7 @@
                       <div class="c-feeds__card-icon"><span class="fa fa-quote-left"></span></div>
                       <div class="c-feeds-card__text"><span>Этот код выдержит любые испытания. Только пожалуйста, не загружается сайт на слишком старых браузерах!</span></div>
                       <div class="c-feeds-card__about">
-                        <div class="c-feeds-card__img-wrap" style="background-image: url(../../assets/images/content/sabanchev.jpg); background-repeat:no-repeat;"><img class="c-feeds-card__img visually-hidden" alt="" src="require(../../assets/images/content/sabanchev.jpg)"></div>
+                        <div class="c-feeds-card__img-wrap" style="background-image: url(./assets/images/content/sabanchev.jpg); background-repeat:no-repeat;"><img class="c-feeds-card__img visually-hidden" alt="" src="require(./assets/images/content/sabanchev.jpg)"></div>
                         <div class="c-feeds-card__about-text">
                           <div class="c-feeds-card__about-name"><span>Сабанцев Владимир</span></div>
                           <div class="c-feeds-card__about-desc"><span>преподаватель</span></div>
@@ -312,10 +312,10 @@
                   <div class="l-container">
                     <div class="l-footer__nav">
                       <ul class="c-nav__list">
-                        <li class="c-nav__item"><a class="c-nav__link" href="/my_works.html">мои работы</a></li>
-                        <li class="c-nav__item"><a class="c-nav__link" href="/blog.html">блог</a></li>
-                        <li class="c-nav__item"><a class="c-nav__link" href="/about.html">обо мне</a></li>
-                        <li class="c-nav__item"><a class="c-nav__link" href="/login.html">авторизация</a></li>
+                        <li class="c-nav__item"><a class="c-nav__link" href="./my_works.html">мои работы</a></li>
+                        <li class="c-nav__item"><a class="c-nav__link" href="./blog.html">блог</a></li>
+                        <li class="c-nav__item"><a class="c-nav__link" href="./about.html">обо мне</a></li>
+                        <li class="c-nav__item"><a class="c-nav__link" href="./login.html">авторизация</a></li>
                       </ul>
                     </div>
                     <div class="l-footer__text"><span>Я веб-разработчик из Санкт-Петербурга, и этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool.</span></div>
